--- a/templates/sales/sale_create.html
+++ b/templates/sales/sale_create.html
@@ -88,8 +88,8 @@
                             <span class="badge bg-warning">{{ sale.get_status_display }}</span>
                         </td>
                         <td>
-                            <a href="#" class="btn btn-sm btn-warning">Edit</a>
-                            <a href="#" class="btn btn-sm btn-danger">Delete</a>
+                            <button class="btn btn-sm btn-warning">Edit</button>
+                            <button class="btn btn-sm btn-danger">Delete</button>
                         </td>
                     </tr>
                     {% endfor %}
