--- a/templates/receive_transaction/bank_receive.html
+++ b/templates/receive_transaction/bank_receive.html
@@ -7,7 +7,7 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h4>Bank Receive List</h4>
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#bankReceiveModal">
-        Create New
+        <i class="fas fa-plus me-1"></i>Create New
     </button>
 </div>
 
@@ -64,8 +64,8 @@
 <div class="card">
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-striped">
-                <thead>
+            <table class="table table-striped table-hover">
+                <thead class="table-dark">
                     <tr>
                         <th>SL</th>
                         <th>Date</th>
@@ -85,12 +85,14 @@
                     <tr>
                         <td>{{ forloop.counter }}</td>
                         <td>{{ receive.entry_date }}</td>
-                        <td>{{ receive.get_type_display }}</td>
+                        <td>
+                            <span class="badge bg-info">{{ receive.get_type_display }}</span>
+                        </td>
                         <td>{{ receive.account_name }}</td>
                         <td>-</td>
                         <td>-</td>
                         <td>{{ receive.receive_bank_name }}</td>
-                        <td>BDT {{ receive.amount }}</td>
+                        <td class="fw-bold text-success">BDT {{ receive.amount }}</td>
                         <td>{{ receive.note }}</td>
                         <td>
                             <span class="badge bg-{% if receive.status == 'Pending' %}warning{% else %}success{% endif %}">
@@ -98,8 +100,24 @@
                             </span>
                         </td>
                         <td>
-                            <a href="#" class="btn btn-sm btn-warning">Edit</a>
-                            <a href="#" class="btn btn-sm btn-danger">Delete</a>
+                            <div class="btn-group btn-group-sm">
+                                <a href="#" class="btn btn-warning" data-bs-toggle="tooltip" title="Edit">
+                                    <i class="fas fa-edit"></i>
+                                </a>
+                                <a href="#" class="btn btn-danger" data-bs-toggle="tooltip" title="Delete">
+                                    <i class="fas fa-trash"></i>
+                                </a>
+                                <a href="#" class="btn btn-success" data-bs-toggle="tooltip" title="Confirm">
+                                    <i class="fas fa-check"></i>
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="11" class="text-center text-muted py-4">
+                            <i class="fas fa-university fa-2x mb-2"></i>
+                            <p>No bank receipts found</p>
                         </td>
                     </tr>
                     {% endfor %}
