--- a/templates/warehouse/ghat_to_dump.html
+++ b/templates/warehouse/ghat_to_dump.html
@@ -6,67 +6,53 @@
 {% block content %}
 <div class="card">
     <div class="card-header">
-        <h5>Ghat To Dump</h5>
+        <h5 class="card-title mb-0">Ghat To Dump</h5>
     </div>
     <div class="card-body">
-        <form method="post" class="mb-4">
-            {% csrf_token %}
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="mb-3">
+        <!-- Form Section -->
+        <div class="row mb-4">
+            <div class="col-12">
+                <form method="post" class="row g-3">
+                    {% csrf_token %}
+                    <div class="col-md-6">
                         <label class="form-label">LC Number</label>
                         {{ form.lc_number }}
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
+                    <div class="col-md-6">
                         <label class="form-label">Godown</label>
                         {{ form.godown }}
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="mb-3">
+                    <div class="col-md-6">
                         <label class="form-label">Lighter Vessel</label>
                         {{ form.lighter_vessel }}
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
+                    <div class="col-md-6">
                         <label class="form-label">Product Info</label>
                         {{ form.product_info }}
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="mb-3">
+                    <div class="col-md-6">
                         <label class="form-label">Update Date</label>
                         {{ form.update_date }}
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
+                    <div class="col-md-6">
                         <label class="form-label">Dump</label>
                         {{ form.dump }}
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="mb-3">
+                    <div class="col-12">
                         <label class="form-label">Note</label>
                         {{ form.note }}
                     </div>
-                </div>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        </div>
 
+        <!-- Data Table Section -->
         <div class="table-responsive">
-            <table class="table table-striped">
-                <thead>
+            <table class="table table-striped table-bordered">
+                <thead class="table-dark">
                     <tr>
                         <th>SL</th>
                         <th>LC Number</th>
@@ -75,6 +61,8 @@
                         <th>Product</th>
                         <th>Dump</th>
                         <th>Update Date</th>
+                        <th>Note</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -87,6 +75,15 @@
                         <td>{{ transfer.product_info }}</td>
                         <td>{{ transfer.dump.name }}</td>
                         <td>{{ transfer.update_date }}</td>
+                        <td>{{ transfer.note|default:"-" }}</td>
+                        <td>
+                            <a href="#" class="btn btn-sm btn-warning">Edit</a>
+                            <a href="#" class="btn btn-sm btn-danger">Delete</a>
+                        </td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="9" class="text-center text-muted">No data available</td>
                     </tr>
                     {% endfor %}
                 </tbody>
