--- a/templates/warehouse/lighter_to_ghat.html
+++ b/templates/warehouse/lighter_to_ghat.html
@@ -6,53 +6,45 @@
 {% block content %}
 <div class="card">
     <div class="card-header">
-        <h5>Lighter Vessel To Ghat</h5>
+        <h5 class="card-title mb-0">Lighter Vessel To Ghat</h5>
     </div>
     <div class="card-body">
-        <form method="post" class="mb-4">
-            {% csrf_token %}
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="mb-3">
+        <!-- Form Section -->
+        <div class="row mb-4">
+            <div class="col-12">
+                <form method="post" class="row g-3">
+                    {% csrf_token %}
+                    <div class="col-md-6">
                         <label class="form-label">LC Number</label>
                         {{ form.lc_number }}
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
+                    <div class="col-md-6">
                         <label class="form-label">Lighter Vessel</label>
                         {{ form.lighter_vessel }}
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="mb-3">
+                    <div class="col-md-6">
                         <label class="form-label">Product Info</label>
                         {{ form.product_info }}
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
+                    <div class="col-md-6">
                         <label class="form-label">Moving Date</label>
                         {{ form.moving_date }}
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="mb-3">
+                    <div class="col-md-6">
                         <label class="form-label">Received Godown</label>
                         {{ form.received_godown }}
                     </div>
-                </div>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        </div>
 
+        <!-- Data Table Section -->
         <div class="table-responsive">
-            <table class="table table-striped">
-                <thead>
+            <table class="table table-striped table-bordered">
+                <thead class="table-dark">
                     <tr>
                         <th>SL</th>
                         <th>LC Number</th>
@@ -60,6 +52,7 @@
                         <th>Product</th>
                         <th>Moving Date</th>
                         <th>Received Godown</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -71,6 +64,14 @@
                         <td>{{ transfer.product_info }}</td>
                         <td>{{ transfer.moving_date }}</td>
                         <td>{{ transfer.received_godown.name }}</td>
+                        <td>
+                            <a href="#" class="btn btn-sm btn-warning">Edit</a>
+                            <a href="#" class="btn btn-sm btn-danger">Delete</a>
+                        </td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="7" class="text-center text-muted">No data available</td>
                     </tr>
                     {% endfor %}
                 </tbody>
